# e-commerce-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
postman_collection/: Ecommerce APi.postman_collection.json
src/django_project/: settings.py  urls.py
src/django_project/customer/: models.py  repository.py  serializers.py  urls.py  views.py
src/django_project/customer/migrations/: 0001_initial.py
src/django_project/fixtures/: initial_data.json
src/django_project/product/: apps.py  models.py  repository.py  serializers.py  urls.py  views.py
src/django_project/product/migrations/: 0001_initial.py
src/django_project/reservation/: apps.py  models.py  repository.py  serializers.py  urls.py  views.py
src/django_project/reservation/migrations/: 0001_initial.py
src/ecommerce/application/dto/: customer.py  product.py  reservation.py
src/ecommerce/application/use_cases/: customer.py  exceptions.py  product.py  reservation.py
src/ecommerce/domain/entities/: customer.py  product.py  reservation.py
src/ecommerce/domain/repositories/: customer.py  product.py  reservation.py
src/ecommerce/domain/services/: reservation.py
src/ecommerce/infra/repositories/: in_memory_customer.py  in_memory_product.py  in_memory_reservation.py
src/tests/django_project/: mock_data.py
src/tests/django_project/customer/: test_customer_e2e.py  test_customer_repository.py
src/tests/django_project/product/: test_product_e2e.py  test_product_repository.py
src/tests/django_project/reservation/: test_e2e.py  (+4 more)
src/tests/ecommerce/: mock_data.py
(+9 files in other folders)
